# code-challenge-2024-slanesuke

./: .gitignore  output.txt  run.sh  solution.md  test.txt
mine-your-first-block/: Cargo.toml  output.txt
mine-your-first-block/src/: block.rs  main.rs  transactions.rs  utils.rs  validation.rs
