[package]
name = "mine-your-first-block"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ripemd = "0.1.3"
secp256k1 = { version = "0.28.2", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sha2 = "0.10.8"
hex = "0.4.3"
itertools = "0.12.1"
